--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trace_updater",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Dash component which allows to update a dcc.Graph its traces. This component is data efficient as it (1) only sends the to-be-updated traces (and not the whole) from the back-end to the client-side and (2) only updates the traces that have changed (and does not redraw the whole figure).",
   "repository": {
     "type": "git",
@@ -51,7 +51,8 @@
     "terser-webpack-plugin": "^2.3.0",
     "webpack": "4.36.1",
     "webpack-cli": "3.3.6",
-    "webpack-serve": "3.1.0"
+    "webpack-serve": "3.1.0",
+    "lodash": "^4.17.21"
   },
   "engines": {
     "node": ">=8.11.0",
