--- a/Project.toml
+++ b/Project.toml
@@ -2,11 +2,11 @@
 name = "TraceUpdater"
 uuid = "1b08a953-4be3-4667-9a23-808623c38271"
 authors = ["Jonas Van Der Donckt <jonvdrdo.vanderdonckt@ugent.be>"]
-version = "0.0.8"
+version = "0.0.9"
 
 [deps]
 Dash = "1b08a953-4be3-4667-9a23-3db579824955"
 
 [compat]
 julia = "1.2"
-Dash = "0.1.3"
+Dash = "0.1.3, 1.0"
