--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:activated": "npm run build:js && npm run build:backends-activated"
   },
   "author": "Jonas Van Der Donckt <jonvdrdo.vanderdonckt@ugent.be>",
-  "license": "imec license",
+  "license": "MIT",
   "dependencies": {
     "ramda": "^0.28.0"
   },
