:pen: add dev arg

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "validate-init": "python _validate_init.py",
     "prepublishOnly": "npm run validate-init",
     "build:js": "webpack --mode production",
+    "build:js::dev": "webpack --mode development",
     "build:backends": "dash-generate-components ./src/lib/components trace_updater -p package-info.json --r-prefix '' --jl-prefix ''",
     "build:backends-activated": "(. venv/bin/activate || venv\\scripts\\activate && npm run build:py_and_r)",
     "build": "npm run build:js && npm run build:backends",
